--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - ENABLE_BALANCE_QUERY=$ENABLE_BALANCE_QUERY
       - DISABLE_FAST_LINK=$DISABLE_FAST_LINK
       - OPENAI_SB=$OPENAI_SB
+      - NEXT_PUBLIC_SMARTIES_URL=$NEXT_PUBLIC_SMARTIES_URL
 
   chatgpt-next-web-proxy:
     profiles: ["proxy"]
@@ -36,3 +37,4 @@ services:
       - ENABLE_BALANCE_QUERY=$ENABLE_BALANCE_QUERY
       - DISABLE_FAST_LINK=$DISABLE_FAST_LINK
       - OPENAI_SB=$OPENAI_SB
+      - NEXT_PUBLIC_SMARTIES_URL=$NEXT_PUBLIC_SMARTIES_URL
