--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@vercel/analytics": "^0.1.11",
     "@vercel/speed-insights": "^1.0.2",
     "ahooks": "^3.8.4",
+    "antd": "^5.24.3",
     "axios": "^1.7.5",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.9.2",
     "fuse.js": "^7.0.0",
     "heic2any": "^0.0.4",
     "html-to-image": "^1.11.11",
+    "i18next": "^24.2.3",
     "idb-keyval": "^6.2.1",
     "lodash-es": "^4.17.21",
     "markdown-to-txt": "^2.0.1",
@@ -45,6 +47,7 @@
     "openapi-client-axios": "^7.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "rehype-highlight": "^6.0.0",
