--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "axios": "^1.7.5",
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.9.2",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "fuse.js": "^7.0.0",
     "heic2any": "^0.0.4",
     "html-to-image": "^1.11.11",
