--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@ant-design/icons": "5.x",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@hello-pangea/dnd": "^16.5.0",
     "@modelcontextprotocol/sdk": "^1.0.4",
