--- a/package.json
+++ b/package.json
@@ -60,9 +60,13 @@
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.4",
     "zod": "^3.24.1",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "eventemitter3": "^5.0.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@types/lodash": "^4.17.13",
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/cli": "1.5.11",
     "@testing-library/dom": "^10.4.0",
