--- a/app/mcp/mcp_config.default.json
+++ b/app/mcp/mcp_config.default.json
@@ -1,3 +1,13 @@
 {
-  "mcpServers": {}
+    "mcpServers": {
+        "arxiv-mcp-server": {
+            "command": "uv",
+            "args": [
+                "tool",
+                "run",
+                "arxiv-mcp-server",
+                "--storage-path", "/path/to/配置下载论文存放路径"
+            ]
+        }
+    }
 }
